objects/agf__ADM_Work_SLA_Response_Time__mdt.object
<CustomObject>
    <description>Part of the SLA Monitoring project. Definitions for how frequently Work records need to be updated, based on things like record type, severity/priority, and different kinds of events. Initially focused just on Investigations, but extensible for other use cases.</description>
    <fields>
        <fullName>agf__Event_Type__c</fullName>
        <label>Event Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Respects_Business_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, the time math will respect the Business Hours defined for the org/team/etc.
If false, uses 24x7 time.</description>
        <label>Respects Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Response_Time_In_Minutes__c</fullName>
        <description>The amount of time (in minutes) in which this SLA must be met</description>
        <label>Response Time (Minutes)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Level_or_Priority__c</fullName>
        <description>The Investigation Severity Level (e.g. &quot;1&quot; through &quot;4&quot;) or Bug Priority (&quot;P0&quot; through &quot;P4&quot;) for which this record defines an SLA</description>
        <label>Severity Level/Priority</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work_Type__c</fullName>
        <description>The Type of Work (bug/investigation/user story/etc) to which this SLA applies</description>
        <label>Work Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Work SLA Response Time</label>
    <pluralLabel>Work SLA Response Times</pluralLabel>
</CustomObject>